--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   http: ^0.12.0+2
   test: 1.5.2
 
+  sqflite: ^1.1.5
+  path_provider: ^0.5.0+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
