--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
   test: 1.5.2
-
   sqflite: ^1.1.5
   path_provider: ^0.5.0+1
+  rxdart: ^0.18.0
 
 dev_dependencies:
   flutter_test:
